# user-guide-old

./: .Rprofile  .gitignore  .nojekyll  Cargo.toml  LICENSE  README.md  _quarto.yml  about.html  conversion.html  conversion.qmd  data-types.html  data-types.qmd  extendr-macro.html  extendr-macro.qmd  getting-started.html  getting-started.qmd  heckin-case-converter.html  heckin-case-converter.qmd  hello-world.html  hello-world.qmd  index.html  index.qmd  project-structure.html  project-structure.qmd  robots.txt  search.json  simple-conversions.qmd  sitemap.xml  using-rust-types.html  using-rust-types.qmd  vectorizing.qmd
.cargo/: config.toml
.github/workflows/: publish.yml
.quarto/idx/: about.qmd.json  conversion.qmd.json  index.qmd.json
.quarto/xref/: 9e60c2e2  INDEX
_freeze/conversion/execute-results/: html.json  typ.json
_freeze/extendr-macro/execute-results/: html.json
_freeze/getting-started/execute-results/: html.json
_freeze/heckin-case-converter/execute-results/: html.json
_freeze/simple-conversions/execute-results/: html.json
_freeze/using-rust-types/execute-results/: html.json
_freeze/vectorizing/execute-results/: html.json
_site/: conversion.html  index.html
_site/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/: main.rs
